--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1450,6 +1450,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'us'"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def statistical_select(elements):\n",
+    "    results = []\n",
+    "    resoltion = 1000\n",
+    "    for ele in elements:\n",
+    "        for conte in range(0,int(resoltion*ele[1])):\n",
+    "            results.append(ele[0])\n",
+    "    return random.choice(results)\n",
+    "        \n",
+    "    \n",
+    "statistical_select([(\"uk\",0.01),(\"us\",0.90)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'uk',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'us',\n",
+       " 'uk',\n",
+       " 'us']"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ statistical_select([(\"uk\",0.50),(\"us\",0.50)]) for i in range(0,100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def cane():\n",
+    "    print(\"Cane\")\n",
+    "    \n",
+    "entity_function = cane"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cane\n"
+     ]
+    }
+   ],
+   "source": [
+    "entity_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
