--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1628,6 +1628,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Amount': 21.030000000000001,\n",
+       " 'City': 'Birmingham',\n",
+       " 'Date': datetime.date(2017, 9, 11),\n",
+       " 'Emploeyy_id': 1301,\n",
+       " 'Role': 'Sales rep',\n",
+       " 'Type': 'Taxi',\n",
+       " 'currency': 'GBP',\n",
+       " 'id': 25001,\n",
+       " 'name': 'Hope',\n",
+       " 'surname': 'Iqbal'}"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.iloc[0,:].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
